--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "framer-motion": "^10.16.4",
     "intl-messageformat": "^10.5.0",
     "next": "13.4.19",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
